--- a/public/categories.html
+++ b/public/categories.html
@@ -52,7 +52,7 @@
     const $ = id => document.getElementById(id);
 
     const fetchCategories = async () => {
-      const res = await fetch('http://localhost:5000/api/categories/summaries');
+      const res = await fetch('https://whiplash-ds3a.onrender.com/api/categories/summaries');
       const categories = await res.json();
       renderCategories(categories);
     };
@@ -106,7 +106,7 @@
       if (!name) return;
 
       try {
-        const res = await fetch('http://localhost:5000/api/categories', {
+        const res = await fetch('https://whiplash-ds3a.onrender.com/api/categories', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name })
@@ -140,7 +140,7 @@
       }
 
       try {
-        const res = await fetch(`http://localhost:5000/api/categories/name/${encodeURIComponent(query)}`);
+        const res = await fetch(`https://whiplash-ds3a.onrender.com/api/categories/name/${encodeURIComponent(query)}`);
         if (!res.ok) {
           $('categoryList').innerHTML = '<p class="message-text" style="color: red;">Category not found</p>';
           return;
@@ -159,7 +159,7 @@
       if (!newName || newName === currentName) return;
 
       try {
-        const res = await fetch(`http://localhost:5000/api/categories/${id}/name`, {
+        const res = await fetch(`https://whiplash-ds3a.onrender.com/api/categories/${id}/name`, {
           method: 'PUT',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name: newName })
@@ -184,7 +184,7 @@
       if (!confirm('Are you sure you want to delete this category?')) return;
 
       try {
-        const res = await fetch(`http://localhost:5000/api/categories/${id}`, {
+        const res = await fetch(`https://whiplash-ds3a.onrender.com/api/categories/${id}`, {
           method: 'DELETE'
         });
 
