--- a/public/products.html
+++ b/public/products.html
@@ -71,7 +71,7 @@
     const $ = id => document.getElementById(id);
 
     async function fetchCategories(targetId = "categorySelect") {
-      const res = await fetch("http://localhost:5000/api/categories");
+      const res = await fetch("https://whiplash-ds3a.onrender.com/api/categories");
       const data = await res.json();
       const select = $(targetId);
       select.innerHTML = "";
@@ -84,7 +84,7 @@
     }
 
     async function fetchSuppliers(targetId = "supplierSelect") {
-      const res = await fetch("http://localhost:5000/api/suppliers");
+      const res = await fetch("https://whiplash-ds3a.onrender.com/api/suppliers");
       const data = await res.json();
       const select = $(targetId);
       select.innerHTML = "";
@@ -97,7 +97,7 @@
     }
 
     async function fetchProducts() {
-      const res = await fetch("http://localhost:5000/api/products");
+      const res = await fetch("https://whiplash-ds3a.onrender.com/api/products");
       const data = await res.json();
       const list = $("productList");
       
@@ -129,7 +129,7 @@
 
     async function deleteProduct(id) {
       if (!confirm("Are you sure you want to delete this product?")) return;
-      const res = await fetch(`http://localhost:5000/api/products/${id}`, { method: "DELETE" });
+      const res = await fetch(`https://whiplash-ds3a.onrender.com/api/products/${id}`, { method: "DELETE" });
       const result = await res.json();
       alert(result.message || "Product deleted.");
       fetchProducts();
@@ -154,7 +154,7 @@
       e.preventDefault();
       const formData = new FormData(e.target);
       const body = Object.fromEntries(formData.entries());
-      const res = await fetch("http://localhost:5000/api/products", {
+      const res = await fetch("https://whiplash-ds3a.onrender.com/api/products", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify(body)
@@ -170,7 +170,7 @@
       const formData = new FormData(e.target);
       const body = Object.fromEntries(formData.entries());
       const id = body.id;
-      const res = await fetch(`http://localhost:5000/api/products/${id}`, {
+      const res = await fetch(`https://whiplash-ds3a.onrender.com/api/products/${id}`, {
         method: "PUT",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify(body)
@@ -184,7 +184,7 @@
     async function searchProduct() {
       const name = $("searchInput").value.trim();
       if (!name) return alert("Enter a product name");
-      const res = await fetch(`http://localhost:5000/api/products/name/${name}`);
+      const res = await fetch(`https://whiplash-ds3a.onrender.com/api/products/name/${name}`);
       const result = await res.json();
       const div = $("searchResult");
       if (res.status !== 200) {
